<resources>
    <string name="License_Auth_failed">认证失败，请稍后再试</string>
    <string name="License_account_aismatch">认证失败，帐号未登记。</string>
    <string name="License_fingerprint_mismatch">未经认证的授权信息，需确认是否存在授权。</string>
    <string name="License_unfilled_mailbox">邮件发送异常，请检查邮件。</string>
    <string name="__picker_all_image">图片和视频</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_me">与我相关</string>
    <string name="about_us">关于织语</string>
    <string name="accept_notify">接收新消息通知</string>
    <string name="account_not_exist">用户名或密码错误</string>
    <string name="action_login">登录</string>
    <string name="action_settings">Settings</string>
    <string name="add">添加</string>
    <string name="add_close_friend">添加为我的密友</string>
    <string name="add_close_friend_fail">添加失败</string>
    <string name="add_close_friend_success">添加成功</string>
    <string name="add_contact_tip">查找已在集群内的组织成员</string>
    <string name="add_ext_contact">添加联系人</string>
    <string name="add_fastreply">添加快捷回复</string>
    <string name="add_inviter">添加参与人</string>
    <string name="add_senior_close_friend">添加高管密友</string>
    <string name="address">地址</string>
    <string name="address_not_correct">登录地址错误，请联系管理员</string>
    <string name="admin">管理员</string>
    <string name="admin_pwd_reset">您的密码已于 %1$s 由管理员重置，如有疑问请联系管理员。</string>
    <string name="advertising_skip_text">(%d)跳过</string>
    <string name="agc_02CAC09AC82718922B7A47188A3EF7CB928CA8D0EBE456FE3A763223DC25E33E">00847AD57545B1F9224C5B84B97508CF0EDD0FF85A58722AF464522E58F10A867E52E720FE9D080619849B7A154115AA367C7C7BA357B0FD239602704011D80C27</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">00FA9A2E05C3C864ECA7434328A1FE32D8F90346BDE3F0A9A20285773E0E78D8E474CBD626E2899F5B63FCE4F71F060EDA18E6F419B0432DE36CCF53623C5BEECC3FADEE1A0A63FA27E883A339C3B8C0F3</string>
    <string name="agc_0692DAD5D21427E7CCE627E8DC1ED71FDB307EBDC4DFB3A554BC60FCCE38E034">00DAD4070918342D60BC665AABE06A2516B22B7AF4955F98ADA8415C8143A97AA27C1043B9588E2E16DC22351C5707C3E6C674251D9E9C15F3A0E4DE0789266458</string>
    <string name="agc_0DC3A56C1AC03D404A409264B0AED075A38F9EB082F5057704EA33D4B5B9B9C9">0045D9C33B344A789B82167FC39F391DEC2C69DBBAEBDB9017A7BE03455181816189BDEFA16A4486D0184857BB90359BB6958AEA8B14B251A928346EFC94313AF9B251B3C0FB69EC96C384D279BFD0B42C6BDED29C681D799225DD1528BD41E52F</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00077A066040DF08D92AA9F5ACE16AB438907BD3CAC61C886357390005C119DB4DD028EC306B6B22672840BBED052F569C239E7761E84C605ED47C19BA74BF95D3509DB2E91E3B59F9051CB68331BE13A71274103BBFD77B3D7A234A79EF80E905</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">0000E9C220CCD88200C7013BAC6CE8E3EF8BF569094066D7C3308F6BE09E5559EB5B838A580D3536E3677110802C52277D</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">32F85170A7D0B641153037CD1F2D0E9B</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">00762F3D89C5C232BBB17A8BD0E457052293B987597CF8246766E5838F9319C2CE</string>
    <string name="agc_346F273384FE025F17324187A93E7E3BFB08DD081290E00F942EE066625A31DD">00F451F37ADE8123D793FED5E6C699AC6D84E5420A7FCC9A39F8CA873D9B8CC207E3FAA1E96DF18AA9F83B6DF7A4B6FEF2</string>
    <string name="agc_35623988AD86DCDA34F1257D6E93F34177702C6302115D897E60D38E0816CD35">002348A4BA65774153501BA1C7503C90F7B89143583024AD78E224A5971A5D4D44B756429FD773974952DA8D45DF3A8224</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">008EB9CF64D3262B0E3FA91E27D2596D152A8A63014475BC1C94D517D7C426B32668093CC58CE2B18826659E129BBE9C13</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">000404FCFCCB9EE38EE10B83E8C92CD17B6D8B9BF23F3E3FB9A703935723C3204127DE82626BA91E980D78A5F6BD84C47FCA14F120296ED2C0F88F82C823EDE10A9D5E5FD4D69CF2B01BE96C372731377E6FA3A29CF26CEA5F1BEDADF766C04B4B</string>
    <string name="agc_3FC6CD8093B4922272D7E36E11F6576A13C3767B8DFE7E7C806E0B096B233E18">007A079D1258F58FD4776E7B80D6EDD0BFB9F9217EBC197A607F6B5099CDBC517C3CF33F2751838A9639191AA3ABD1AD00</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">0047E991C66AA7BDE99C5C3A26A3AF2BBCE5231D0C1A72B62B7917B57EDE23185C</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">001CA3A3B8FCF95EA691ABECCD39BC8DBD13E57DCBB26662A33453E054EF88C877C994CAF9268541FBABFA8585B26A0256FE404F1AF5433E287D799D98145F75EE</string>
    <string name="agc_4A1001369614B0D938752C6AB4967DE352A3ADD13CAE741A7DF78EE728F74136">0062BB1FE3B92EFEFF487671EC13D389422B4F05898E76A42F0BF435B836E8A4FC</string>
    <string name="agc_4D79CE1E9E81D44FFC3CBFEC80D073F18409AAC96E2DAFB11951005E99B02EDB">002CDFC421CAA73875C03D4200B17C4114D4DB2C1C99E99DE747E36692CC55BD6792A1880C87D84833E47A8CD98AE07E7BEFB5C0D2B727ACDE98F9EEBB7306B911</string>
    <string name="agc_4E59F3D37D339A997CACA4A0C457DAA94A1F044555D950F1F9835B0B6F600D38">0003B90C89765992CD2C438E96C5CE3CD1F45B247625315BA14BA080F9F644ADF4</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">00DED96E7DB1052BAA970289A085CF1B82EBD12A96D466E7667F24942CEBA82E05B0B34BD3B1C2DFAC8A607A8A8EDA43F9</string>
    <string name="agc_55A14C88686718883C90D427958F540EC05210E430ED915D772D8F34C350D08B">0030F9F36A1D89341E7978FEB434DBE474C958E3BBED08E0279ADD79248AEB3C6E4E7C9A984D5A7F23F331FD6A17476E29E1CC81463F6FBCE0C8AEBD56F134FBB1</string>
    <string name="agc_56BB9FCDF7DAFDC12F18BE8BF765769B14E090D615353A1FF24238CC17EF2F2F">0058B6AC8FC941FD99C88E6C04BB514935884DE5FFC5178ACF36925BAE1A7E5134326A5FCE9E5C777D644285CF898F92A380101A1BCFE57217A406B97B1BC49789</string>
    <string name="agc_5B1EF301F6E8D26793B9699E972C1FE3B4563543360C2A380F9C42CED9967B7B">00EA552E07992D08273FE9E4AA61081F7C1E755829AC4D58BFA47B28839AE6190AE0EB9AC59B1E2DC08CD6867B6BDD68825D05BF3101AEA99BEF58CAB9E07195081231A3B516D1678D2B1581F5B2BD0DA12B9143F029D0369C685BE3ECE2177DF3</string>
    <string name="agc_5B5AF298A58B98DB86A04DB0E3B1924F7EAC7A14CA781F042E5F999BD413CC9E">003324C627BC33EC63E379EF42CF4874E4F610D6E8423C27FE13CF05F242C736691AA06C33C3A11D3B7A446FF83B8003EA</string>
    <string name="agc_63F3255D837430EC4C799B2B5A8091A554A101C6FAC114907463E723AF33B544">00498BC16460D59B596B9802DB9D19DBCD65E77452A552E7676B97DA331CF73A719FFEA6AACB61E19DC68763DEBAC50137F8DD0C81121A67EE0F065663DED3D09762F2802F3B7CE2837D23A5396A42AAF25315595EA9CD18B424DF9F724C4D017005C6A565C7DAFD88FAFBA49C361AC3B42388E05AB8BDC4CF0D1DBCB79228A5434A14FBE4B23ED6DA2681B9790BD6523A47C99449DE057D19444A4ACE643057A6D0E1ACFCF044D92C2F0430877C91C01B997F51D975924C4D2F9789A3C7967080DE214C0F78C1398D39022BD54E2ED63E</string>
    <string name="agc_66412D70318648FA3BDD00A3CB2E73EE439F788EBA8010232B3B145A1ADE18F4">00192951EDEDE2D23AF48A6A47F9A865128E658417671D0193F8F2374EA637B06D</string>
    <string name="agc_69589FA8E5257AA8E3C477503B5586F4B4981C77F69B612318E3FC7AF1B00890">00244CD4F267B4B0E82727BA826540EDE9FE09823A7DDD18C21B4602E017C186E0</string>
    <string name="agc_6D239E4C2FF1354F6DBB62ED715B0B2A4058A2C1B368EB9F5FAF8B457ED28FA6">0013CEED28EC1D736DEDD2AB9F4E2F8EE054886F1B66B9F58DD24B45B8B2E45B5F8A5A113C934596E87455458B33330A46BD7DBEDA76D4B3F10E6FEA38386D3E22</string>
    <string name="agc_6DC2F1E7B3508CE97B8A34B184EAD19FADAAC83160422DE0BA2F78B0438C6A98">00C3A232BCFC0FC1A5CA784350C5CE8D385FA476C2C6B74D470770DB3D8442E1B1ACC0B7A40B2005DCC5EC05F9EE22ED48</string>
    <string name="agc_7946AE46AB6C7F8CBDCAF61B99109C7C5309E95125FEA7458FBF603EC34F79F0">006D3C753B9E78B3663226B430FED32A2CF69FB413696172CAAD8F6E47E8CF4F63</string>
    <string name="btn_send_local_log">发送本地日志</string>
    <string name="chat_bg">聊天背景</string>
    <string name="clear_cache">清理缓存</string>
    <string name="common_chat_listen_message">听文字消息</string>
    <string name="common_chat_listen_message_tips">开启后，点一下聊天中的文字消息就能听到</string>
    <string name="font_size4">字体大小</string>
    <string name="general">通用</string>
    <string name="group_chat_show_dept">群会话显示成员部门信息</string>
    <string name="kk_account_setting">帐号与安全</string>
    <string name="kk_attachment_file">共%s个附件</string>
    <string name="kk_desc">描述</string>
    <string name="kk_full_day">全天</string>
    <string name="kk_important">重要</string>
    <string name="kk_location">输入日程地点</string>
    <string name="kk_only_inviter_see">仅参与人可见</string>
    <string name="kk_participant">参与人</string>
    <string name="kk_pos">职位</string>
    <string name="kk_private_schedule">私密日程</string>
    <string name="kk_reminder_confirm">该日程是否需要参与人确认</string>
    <string name="kk_repeat">重复</string>
    <string name="kk_schedule_confirm">日程确认</string>
    <string name="kk_schedule_title_hint">请输入日程标题...</string>
    <string name="kk_ten_min_start">提前10分钟提醒</string>
    <string name="language_setting">多语言</string>
    <string name="load_cache_size">计算中…</string>
    <string name="logout">退出登录</string>
    <string name="notification">新消息通知</string>
    <string name="notify_intro">开启新消息通知，及时处理工作消息</string>
    <string name="notify_push_display">通知显示消息详情</string>
    <string name="personal_email">邮箱</string>
    <string name="personal_item_enname">英文名</string>
    <string name="personal_phone_num">手机号</string>
    <string name="personal_tel">座机</string>
    <string name="personal_work_id">工号</string>
    <string name="privacy">隐私</string>
    <string name="privacy_ext_contact_tip">对外部联系人的名片展示</string>
    <string name="setting_ztc">消息直达号</string>
    <string name="signature">个性签名</string>
    <string name="sound">声音</string>
    <string name="user_add_contact">添加联系人</string>
    <string name="user_mobile">手机</string>
    <string name="user_send_message">发消息</string>
    <string name="user_work_circle">TA的工作圈</string>
    <string name="user_worknum">工号</string>
    <string name="version">版本 %s</string>
    <string name="version_new">最新</string>
    <string name="vibration">振动</string>
</resources>