<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/activity_common_setting" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.kook.view.BaseItemView android:id="@id/siv_language_setting" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:bottomLine="true" app:canEdit="true" app:height_style="height_thin" app:line_style="long_line" app:textLeft="@string/language_setting" app:topLine="false" />
    <com.kook.view.BaseItemView android:id="@id/siv_font_size" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" app:bottomLine="false" app:canEdit="true" app:height_style="height_thin" app:line_style="short_line" app:textLeft="@string/font_size4" app:topLine="true" />
    <com.kook.view.BaseItemView android:id="@id/siv_chat_background" android:background="@drawable/item_default_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:bottomLine="false" app:canEdit="false" app:height_style="height_thin" app:line_style="short_line" app:textLeft="@string/chat_bg" app:topLine="true" />
    <com.kook.view.SwitcherItemView android:id="@id/swv_chat_listen_message" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_item_margin_top" app:swBottomLine="false" app:swLeftText="@string/common_chat_listen_message" app:swTopLine="false" />
    <TextView android:textSize="@dimen/text_size_explain" android:textColor="#ff979ca4" android:gravity="center_vertical" android:id="@id/tv_chat_listen_message_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/default_margin_left" android:layout_marginTop="10.0dip" android:text="@string/common_chat_listen_message_tips" />
    <com.kook.view.SwitcherItemView android:id="@id/swv_chat_show_dept" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_item_margin_top" app:swBottomLine="false" app:swLeftText="@string/group_chat_show_dept" app:swTopLine="false" />
    <com.kook.view.BaseItemView android:id="@id/siv_clear_cache" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:bottomLine="false" app:canEdit="false" app:height_style="height_thin" app:textLeft="@string/clear_cache" app:textRight="@string/load_cache_size" app:topLine="false" />
    <com.kook.view.TextViewFit android:textSize="@dimen/default_item_text_size" android:textColor="@color/textColorPrimary" android:gravity="center" android:id="@id/tv_send_log" android:background="@drawable/item_default_bg" android:paddingTop="@dimen/slim_item_padding_size" android:paddingBottom="@dimen/slim_item_padding_size" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/btn_send_local_log" />
</LinearLayout>
