<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.kook.view.BaseItemView android:id="@id/siv_account" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/base_item_margin_top" app:bottomLine="false" app:canEdit="true" app:height_style="height_slim" app:siv_style="thin" app:textLeft="@string/kk_account_setting" app:topLine="false" />
    <com.kook.view.BaseItemView android:id="@id/siv_notification" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:bottomLine="false" app:canEdit="true" app:height_style="height_slim" app:siv_style="thin" app:textLeft="@string/notification" app:topLine="false" />
    <com.kook.view.BaseItemView android:id="@id/siv_ztc" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" app:bottomLine="false" app:canEdit="true" app:height_style="height_thin" app:siv_style="thin" app:textLeft="@string/setting_ztc" app:topLine="true" />
    <com.kook.view.BaseItemView android:id="@id/siv_general" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" app:bottomLine="false" app:canEdit="true" app:height_style="height_slim" app:line_style="long_line" app:siv_style="thin" app:textLeft="@string/general" app:topLine="true" />
    <com.kook.view.BaseItemView android:id="@id/siv_privacy" android:background="@drawable/item_default_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:bottomLine="false" app:canEdit="true" app:height_style="height_slim" app:line_style="short_line" app:siv_style="thin" app:textLeft="@string/privacy" app:topLine="true" />
    <com.kook.view.BaseItemView android:id="@id/siv_about" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:bottomLine="false" app:canEdit="false" app:height_style="height_slim" app:siv_style="thin" app:textLeft="@string/version" app:textRight="@string/version_new" app:topLine="false" />
    <com.kook.view.TextViewFit android:textSize="@dimen/default_item_text_size" android:textColor="@color/textColorPrimary" android:gravity="center" android:id="@id/btn_logout" android:background="@drawable/item_default_bg" android:paddingTop="@dimen/slim_item_padding_size" android:paddingBottom="@dimen/slim_item_padding_size" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/logout" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.kook.view.TextViewFit android:textSize="@dimen/text_size_12" android:textColor="@color/text_normal" android:id="@id/tv_app_filing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="36.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>
