<?xml version="1.0" encoding="utf-8"?>
<com.kook.kkbizbase.watermark.WaterMarkConstraintLayout android:id="@id/root_watermark_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/ll_schedule_title" android:background="@color/scheduleTitleBGColor" android:layout_width="0.0dip" android:layout_height="50.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0">
        <EditText android:textSize="16.0sp" android:textColor="@color/white" android:textColorHint="#ffb3d9ff" android:id="@id/et_schedule_title" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="5.0dip" android:hint="@string/kk_schedule_title_hint" android:layout_weight="1.0" android:inputType="text" android:imeOptions="actionDone" />
        <ImageView android:id="@id/close" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/bt_close" />
    </LinearLayout>
    <View android:background="@color/lineGray" android:layout_width="fill_parent" android:layout_height="1.0px" app:layout_constraintTop_toBottomOf="@id/ll_schedule_title" />
    <ScrollView android:id="@id/scroll_items" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="1.0px" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ll_schedule_title">
        <LinearLayout android:orientation="vertical" android:id="@id/ll_item_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="160.0dip">
            <include android:id="@id/include_schedule_start_end" layout="@layout/layout_schedule_start_end" />
            <com.kook.im.schedule.ui.WithSubTextView android:id="@id/wst_full_day" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" app:wstv_leftIcon="@drawable/schedule_icon_data" app:wstv_lineStyle="top" app:wstv_rightIconVisibility="false" app:wstv_switch="true" app:wstv_titleText="@string/kk_full_day" />
            <LinearLayout android:orientation="vertical" android:id="@id/simpleScheduleLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.kook.im.schedule.ui.WithSubTextView android:id="@id/wst_desc" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" app:wstv_leftIcon="@drawable/schedule_icon_describe" app:wstv_lineStyle="top|bottom" app:wstv_titleText="@string/kk_desc" />
                <com.kook.im.schedule.ui.WithSubTextView android:id="@id/wst_invite" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:wstv_leftIcon="@drawable/schedule_icon_participant" app:wstv_lineStyle="top|bottom" app:wstv_titleText="@string/kk_participant" />
                <com.kook.im.schedule.ui.WithSubTextView android:id="@id/wst_remind" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" app:wstv_leftIcon="@drawable/schedule_icon_remind" app:wstv_lineStyle="bottom" app:wstv_titleText="@string/kk_ten_min_start" />
                <com.kook.im.schedule.ui.WithSubTextView android:id="@id/wst_location" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:wstv_hint="@string/kk_location" app:wstv_leftIcon="@drawable/schedule_icon_location" app:wstv_lineStyle="top|bottom_padding" app:wstv_max_length="30" app:wstv_max_lines="1" app:wstv_rightIconVisibility="false" app:wstv_style="edit" />
                <com.kook.im.schedule.ui.WithSubTextView android:id="@id/wst_important" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:wstv_leftIcon="@drawable/schedule_icon_inform" app:wstv_lineStyle="top|bottom_padding" app:wstv_rightIconVisibility="false" app:wstv_switch="true" app:wstv_titleText="@string/kk_important" />
                <com.kook.im.schedule.ui.WithSubTextView android:id="@id/wst_private" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" app:wstv_leftIcon="@drawable/schedule_icon_privacy" app:wstv_lineStyle="bottom_padding" app:wstv_rightIconVisibility="false" app:wstv_subTitleText="@string/kk_only_inviter_see" app:wstv_switch="true" app:wstv_titleText="@string/kk_private_schedule" />
                <com.kook.im.schedule.ui.WithSubTextView android:id="@id/wst_confirm" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" app:wstv_leftIcon="@drawable/schedule_icon_affirm" app:wstv_lineStyle="bottom" app:wstv_rightIconVisibility="false" app:wstv_subTitleText="@string/kk_reminder_confirm" app:wstv_switch="true" app:wstv_titleText="@string/kk_schedule_confirm" />
                <com.kook.im.schedule.ui.WithSubTextView android:id="@id/wst_repeat" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:wstv_leftIcon="@drawable/schedule_icon_repetition" app:wstv_lineStyle="top|bottom" app:wstv_titleText="@string/kk_repeat" />
                <com.kook.im.schedule.ui.WithSubTextView android:id="@id/wst_attachment_file" android:background="@drawable/item_default_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" app:wstv_leftIcon="@drawable/icon_attachment_file" app:wstv_lineStyle="top|bottom" app:wstv_rightIconVisibility="false" app:wstv_titleText="@string/kk_attachment_file" />
                <androidx.recyclerview.widget.RecyclerView android:id="@id/attachmentRecyclerView" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</com.kook.kkbizbase.watermark.WaterMarkConstraintLayout>
